--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,10 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
 }
 
