styled the board

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,8 +1,19 @@
 .board {
-  height: 700px;
-  width: 700px;
-  background-color: bisque;
+  height: 720px;
+  width: 720px;
+  padding: 20px;
+  margin: 10px auto;
+  background-color: #eae1d7;
   display: flex;
+  border: 1px solid black;
+  box-shadow: 0 0 10px;
+}
+
+.squares {
+  border: 1px solid black;
+  box-shadow: 0 0 10px;
+  display: flex;
+  flex: 1;
   flex-direction: column;
 }
 
