added instruction box & more styling

--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,35 @@
 
 .App-header {
   background-color: #222;
-  height: 70px;
+  height: 35px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  padding: 0 10px;
   color: white;
+  font-family: 'Cabin', sans-serif;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .App-intro {
   font-size: large;
+}
+
+.instruction {
+  height: 50px;
+  width: 80px;
+  font-size: 2em;
+  font-family: 'Cabin', sans-serif;
+  color: white;
+  margin: 10px auto;
+  border-radius: 8px;
+  border: 2px solid black;
+  background-color: rgb(19, 163, 74);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @keyframes App-logo-spin {
