refactored props, made simple StartButton component

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -2,7 +2,7 @@
   height: 620px;
   width: 620px;
   padding: 20px;
-  margin: 10px auto;
+  margin: 10px;
   background-color: #353535;
   display: flex;
   border: 1px solid black;
