added some breakpoints and basic responsiveness

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -21,3 +21,28 @@
   display: flex;
   flex: 1;
 }
+
+@media all and (max-width: 1280px) {
+  .board {
+    width: 500px;
+    height: 500px;
+    padding: 14px;
+    margin: 7px;
+  }
+}
+@media all and (max-width: 900px) {
+  .board {
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin: 5px;
+  }
+}
+@media all and (max-width: 600px) {
+  .board {
+    width: 260px;
+    height: 260px;
+    padding: 6px;
+    margin: 3px;
+  }
+}
