--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,9 @@
+.app {
+  height: 100%;
+}
+
 main {
+  height: 100%;
   display: flex;
 }
 
@@ -8,8 +13,9 @@ main {
 }
 
 .left, .right {
-  width: 200px;
-  margin: 20px;
+  width: 220px;
+  padding: 20px;
+  background-color: rgba(233, 233, 233, 0.4);
 }
 
 .mid {
@@ -20,4 +26,18 @@ main {
 @keyframes app-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@media all and (max-width: 1280px) {
+  .left {
+    display: none;
+  }
+}
+@media all and (max-width: 900px) {
+  .right {
+    display: none;
+  }
+}
+@media all and (max-width: 600px) {
+
 }
