--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -7,6 +7,23 @@
   display: flex;
   border: 1px solid black;
   box-shadow: 0 0 10px;
+  position: relative;
+}
+
+.countdown {
+  font-size: 8em;
+  color: yellowgreen;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 3px 3px 2px green;
 }
 
 .squares {
