--- a/src/components/BoardSquare/BoardSquare.css
+++ b/src/components/BoardSquare/BoardSquare.css
@@ -3,10 +3,14 @@
 }
 
 .board-square:hover {
-  background-color: rgba(255, 217, 0)!important;
+  background-color: rgb(255, 206, 115)!important;
   cursor: pointer;
 }
 
-.board-square:active {
+.board-square.wrong-answer:active {
   background-color: red!important;
+}
+
+.board-square.correct-answer:active {
+  background-color: lawngreen!important;
 }
