--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,6 +16,8 @@ main {
   width: 220px;
   padding: 20px;
   background-color: rgba(233, 233, 233, 0.4);
+  display: flex;
+  flex-direction: column;
 }
 
 .panel-main {
