--- a/src/components/BoardSquare/BoardSquare.css
+++ b/src/components/BoardSquare/BoardSquare.css
@@ -8,7 +8,7 @@
 }
 
 .board-square.wrong-answer:active {
-  background-color: red!important;
+  background-color: rgb(190, 0, 0)!important;
 }
 
 .board-square.correct-answer:active {
