--- a/src/components/RoundCountdown/RoundCountdown.css
+++ b/src/components/RoundCountdown/RoundCountdown.css
@@ -2,7 +2,7 @@
   font-size: 2em;
   font-weight: bold;
   text-align: center;
-  margin-top: 20px;
+  margin: 28px 0;
 }
 
 .countdown-timer.finished {
