--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,7 +14,7 @@ main {
 
 .panel-before, .panel-after {
   width: 220px;
-  padding: 20px;
+  padding: 10px 20px;
   background-color: rgba(233, 233, 233, 0.4);
   display: flex;
   flex-direction: column;
